tests/NormalTests/paczka2/big_fuzzy/74324892.err
Error in line 5: uoRVw A173 16,0
Error in line 14: SAo0GNv9JbY A187 -3,3
Error in line 21: SAo0GNv9JbY A187 129,5
Error in line 23: rtLaW A187 8,4
Error in line 27: 1aVN5QTSML A392 11,96
Error in line 30: SAo0GNv9JbY A187 73,4
Error in line 31: 1aVN5QTSML A392 1,0
Error in line 39: uoRVw A392 13,0
Error in line 38: rtLaW A820 11,3
Error in line 44: rtLaW A392 41,0
Error in line 57: 9OmlSO A173 42,9
Error in line 58: 9OmlSO A187 13,6
Error in line 47: rtLaW A820 7,9
Error in line 79: SAo0GNv9JbY A187 9,7
Error in line 85: Q4G1Bj A820 52,5
Error in line 83: 1aVN5QTSML A173 73,5
Error in line 99: A820 A820 6,1
Error in line 100: 1aVN5QTSML A820 129,5
Error in line 111: 1aVN5QTSML A173 15,3
Error in line 113: 1aVN5QTSML A820 79,8
Error in line 110: A820 A173 28,1
Error in line 104: uoRVw A187 310,5
Error in line 123: uoRVw A820 46,3
Error in line 138: rtLaW A187 0,2
Error in line 151: SAo0GNv9JbY A820 43,1
Error in line 135: 9OmlSO A187 87,2
Error in line 160: Q4G1Bj A392 46,3
Error in line 172: uoRVw A173 91,5
Error in line 174: Q4G1Bj A187 64,7
Error in line 176: Q4G1Bj A820 11,8
Error in line 185: Q4G1Bj A173 228,$
Error in line 186: 1aVN5QTSML A820 67,0
Error in line 173: uoRVw A187 80,7
Error in line 190: SAo0GNv9JbY A187 30,5
Error in line 201: 1aVN5QTSML A173 -3,7
Error in line 212: A820 A173 83,9
Error in line 183: Q4G1Bj A173 72,1
Error in line 222: 9OmlSO A173 11,4
Error in line 221: SAo0GNv9JbY A187 29,4
Error in line 229: 1aVN5QTSML A173 357,0
Error in line 247: uoRVw A173 96,8
